--- a/index.html
+++ b/index.html
@@ -37,13 +37,39 @@
                 </form>
             </div>
 
-            <div class="messages">
+            <div id="messages">
                 <h3>Messages</h3>
+                <hr>
             </div>
         </div>
 
         <script>
+            $(() => {
+                $('#send').click(() => {
+                    sendMessage({
+                        name: $('#name').val(),
+                        message: $('#message').val()
+                    });
+                });
 
+                function addMessages(message) {
+                    $('#messages').append(`
+                        <h4>${message.name}</h4>
+                        <p>${message.message}</p>`);
+                }
+
+                function getMessages() {
+                    $.get('http://localhost:3000/messages', (data) => {
+                        data.forEach(addMessages);   
+                    });
+                }
+
+                function sendMessage(message) {
+                    $.post('http://localhost:3000/messages', message);
+                }
+
+                getMessages();
+            });
         </script>
     <body>
 </html>
