--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <script src="jquery/jquery.min.js"></script>
 
         <script src="bootstrap/js/bootstrap.js"></script>
+
+        <script src="/socket.io/socket.io.js"></script>
     <head>
 
     <body>
@@ -67,6 +69,9 @@
                 function sendMessage(message) {
                     $.post('http://localhost:3000/messages', message);
                 }
+
+                var socket = io();
+                socket.on('message', addMessages);
 
                 getMessages();
             });
